fixded overflow \

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body.body {
+  overflow-x: hidden;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -73,7 +74,7 @@ body.body {
     padding: 40px 20px 10px 10px;
   }
   .info-list-grid {
-    margin-bottom: 30px;
+    padding-bottom: 30px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: repeat(6, auto);
     grid-template-areas:
